k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: baytak-ingress

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
    - host: baytak.local

      http:
        paths:

          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend-service

                port:
                  number: 80

          - path: /api
            pathType: Prefix

            backend:
              service:
                name: backend-service

                port:
                  number: 8000
